step18_ingress/02-deploy-sv-market.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: market-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: market-app
  template:
    metadata:
      labels:
        app: market-app
    spec:
      containers:
      - name: market-ctn
        image: hsboo/market-app:1.0 # ◄── 마켓 정품 이미지 포획!
        ports:
        - containerPort: 8000
        resources:
          limits:
            cpu: "200m"
            memory: "64Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: svc-market-app
spec:
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 8000
  selector:
    app: market-app
