step18_ingress/03-deploy-sv-post.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: post-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: post-app
  template:
    metadata:
      labels:
        app: post-app
    spec:
      containers:
      - name: posts-ctn
        image: myoli999/post-app:1.0  
        ports:
        - containerPort: 8000
        resources:
          limits:
            cpu: "200m"
            memory: "64Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: svc-post-app
spec:
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 8000
  selector:
    app: post-app
